@@ -51,7 +51,7 @@ module Mail
     # Send the message via SMTP.
     # The from and to attributes are optional. If not set, they are retrieve from the Message.
     def deliver!(mail)
-      envelope_from, destinations, message = check_params(mail)
+      envelope_from, destinations, message = check_delivery_params(mail)
       response = smtp.sendmail(message, envelope_from, destinations)
 
       settings[:return_response] ? response : self 
