@@ -29,7 +29,7 @@ describe "sendmail delivery agent" do
     
     Mail::Sendmail.should_receive(:call).with('/usr/sbin/sendmail', 
                                               '-i -t -f "roger@test.lindsaar.net"', 
-                                              'marcel@test.lindsaar.net bob@test.lindsaar.net', 
+                                              '"marcel@test.lindsaar.net" "bob@test.lindsaar.net"', 
                                               mail)
     mail.deliver!
   end
@@ -45,7 +45,7 @@ describe "sendmail delivery agent" do
       subject 'invalid RFC2822'
     end
 
-    Mail::Sendmail.should_receive(:popen).with('/usr/sbin/sendmail -i -t -f "roger@test.lindsaar.net" marcel@test.lindsaar.net bob@test.lindsaar.net')
+    Mail::Sendmail.should_receive(:popen).with('/usr/sbin/sendmail -i -t -f "roger@test.lindsaar.net" "marcel@test.lindsaar.net" "bob@test.lindsaar.net"')
 
     mail.deliver!
   end
@@ -69,7 +69,7 @@ describe "sendmail delivery agent" do
       
       Mail::Sendmail.should_receive(:call).with('/usr/sbin/sendmail',
                                                 '-i -t -f "return@test.lindsaar.net"', 
-                                                'to@test.lindsaar.net', 
+                                                '"to@test.lindsaar.net"', 
                                                 mail)
                                                 
       mail.deliver
@@ -92,7 +92,7 @@ describe "sendmail delivery agent" do
 
       Mail::Sendmail.should_receive(:call).with('/usr/sbin/sendmail',
                                                 '-i -t -f "sender@test.lindsaar.net"', 
-                                                'to@test.lindsaar.net', 
+                                                '"to@test.lindsaar.net"', 
                                                 mail)
 
       mail.deliver
@@ -113,7 +113,7 @@ describe "sendmail delivery agent" do
 
       Mail::Sendmail.should_receive(:call).with('/usr/sbin/sendmail',
                                                 '-i -t -f "from@test.lindsaar.net"', 
-                                                'to@test.lindsaar.net', 
+                                                '"to@test.lindsaar.net"', 
                                                 mail)
       mail.deliver
     end
@@ -133,7 +133,24 @@ describe "sendmail delivery agent" do
 
       Mail::Sendmail.should_receive(:call).with('/usr/sbin/sendmail',
                                                 '-i -t -f "\"from+suffix test\"@test.lindsaar.net"',
-                                                'to@test.lindsaar.net',
+                                                '"to@test.lindsaar.net"',
+                                                mail)
+      mail.deliver
+    end
+
+    it "should quote the destinations to ensure leading -hyphen doesn't confuse sendmail" do
+      Mail.defaults do
+        delivery_method :sendmail
+      end
+
+      mail = Mail.new do
+        to '-hyphen@test.lindsaar.net'
+        from 'from@test.lindsaar.net'
+      end
+
+      Mail::Sendmail.should_receive(:call).with('/usr/sbin/sendmail',
+                                                '-i -t -f "from@test.lindsaar.net"',
+                                                '"-hyphen@test.lindsaar.net"',
                                                 mail)
       mail.deliver
     end
@@ -152,7 +169,7 @@ describe "sendmail delivery agent" do
     
     Mail::Sendmail.should_receive(:call).with('/usr/sbin/sendmail', 
                                               '-f "from@test.lindsaar.net"', 
-                                              'marcel@test.lindsaar.net bob@test.lindsaar.net', 
+                                              '"marcel@test.lindsaar.net" "bob@test.lindsaar.net"', 
                                               mail)
     mail.deliver!
   end
@@ -170,7 +187,7 @@ describe "sendmail delivery agent" do
     
     Mail::Sendmail.should_receive(:call).with('/usr/sbin/sendmail', 
                                               "-f \"\\\"foo\\\\\\\"\\;touch /tmp/PWNED\\;\\\\\\\"\\\"@blah.com\"", 
-                                              "\\\"foo\\\\\\\"\\;touch /tmp/PWNED\\;\\\\\\\"\\\"@blah.com", 
+                                              %("\\\"foo\\\\\\\"\\;touch /tmp/PWNED\\;\\\\\\\"\\\"@blah.com"), 
                                               mail)
     mail.deliver!
   end
